change padding for .chat for avoiding covering (#10)
---------

--- a/html/static/styles/style.css
+++ b/html/static/styles/style.css
@@ -27,8 +27,8 @@ a {
 
 .chat{
 	padding: 0 10px;
-	/*margin-bottom: 150px;*/
-	margin-bottom: 90px;
+	/*padding-bottom: 150px;*/
+	padding-bottom: 90px;
 	overflow: hidden;
 }
 
